fix: make outline of text fields visible on hover

--- a/src/components/EditableCard/EditableCard.scss
+++ b/src/components/EditableCard/EditableCard.scss
@@ -1,5 +1,14 @@
 .card.editable-card {
 	justify-content: space-around;
+
+	.title {
+		margin-bottom: 4px;
+	}
+
+	.card-container-no-text {
+		padding: 2px;
+		margin: 8px;
+	}
 }
 .editable-card .title {
 	margin-bottom: 4px;
